--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,25 @@
-Bottle>=0.1
-PyMongo>=0.1
+BeautifulSoup==3.2.1
+Django==1.4.2
+Jinja2==2.6
+Pinax==0.9a2
+bottle==0.11.3
+django-admin-bootstrapped==0.3.2
+django-admin-tools==0.5.1
+django-admintools-bootstrap==-versiontools-admintools-bootstrap-
+django-appconf==0.5
+django-forms-bootstrap==2.0.3.post1
+django-user-accounts==1.0b8
+djangotoolbox==0.9.2
+docutils==0.10
+eventlog==0.6.1
+jsonfield==0.9.6
+metron==1.1
+pinax-theme-bootstrap==3.0a4
+pinax-theme-bootstrap-account==1.0b2
+pinax-utils==1.0b1.dev3
+psycopg2==2.4.6
+pyjade==1.9
+pymongo==2.3
+pytz==2012j
+versiontools==1.9.1
+virtualenv==1.8.2
