--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,15 @@ bottle==0.11.3
 django-admin-bootstrapped==0.3.2
 django-admin-tools==0.5.1
 django-appconf==0.5
-django-forms-bootstrap==2.0.3.post1
+django-forms-bootstrap>=2
 django-user-accounts==1.0b8
 djangotoolbox==0.9.2
 docutils==0.10
 jsonfield==0.9.6
 metron==1.1
-pinax-theme-bootstrap==3.0a4
-pinax-theme-bootstrap-account==1.0b2
-pinax-utils==1.0b1.dev3
+pinax-theme-bootstrap > 1
+pinax-theme-bootstrap-account > 1
+pinax-utils>1
 psycopg2==2.4.6
 pyjade==1.9
 pymongo==2.3
